Wed Jan 29 03:49:36 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/closure.c: use sizeof(*pcl) for correct sizeof value.
	  [ruby-core:57599] [Bug #8978].  Thanks mame!

Wed Jan 29 03:36:42 2014  Eric Wong <e@80x24.org>

	* doc/contributing.rdoc: allow/encourage other git hosts
	  [ruby-core:59807][misc #9421]

Tue Jan 28 23:36:01 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket: Avoid redundant fcntl/fstat syscalls for cloexec
	  sockets.
	  Patch by Eric Wong.  [ruby-core:59429] [Feature #9330]

Tue Jan 28 20:51:07 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (READ_FROM_CHILD): Apply the last hunk of
	  0001-process.c-avoid-EINTR-from-Process.spawn.patch written by
	  Eric Wong in [Bug #8770].

Tue Jan 28 16:33:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (ruby_init_stack, ruby_stack_overflowed_p):
	  place get_stack above others to get stack boundary information.
	  [ruby-core:60113] [Bug #9454]

Tue Jan 28 16:31:13 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (ruby_init_stack, ruby_stack_overflowed_p):
	  place get_stack above others to get stack boundary information.
	  [ruby-core:60113] [Bug #9454]

Tue Jan 28 15:27:36 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread_pthread.c: rlimit is only available on Linux.
	  At least r44712 breaks FreeBSD.
	  [ruby-core:60113] [Bug #9454]

Tue Jan 28 15:17:59 2014  Zachary Scott  <e@zzak.io>

	* lib/set.rb: [DOC] Add examples for Set#intersect? and Set#disjoint?
	  Patch by xavier nayrac [Bug #9331] [ci skip]

Tue Jan 28 15:12:22 2014  Zachary Scott  <e@zzak.io>

	* ext/zlib/zlib.c (rb_zlib_adler32): [DOC] Add example for adler32
	  Patch by Vajrasky Kok [Bug #9307] [ci skip]

Tue Jan 28 08:56:00 2014  Charlie Somerville  <charliesome@ruby-lang.org>

	* compile.c (iseq_build_from_ary_body): Use :blockptr instead of :block
	  as hash key when loading serialized instruction sequences from arrays.
	  [Bug #9455] [ruby-core:60146]
